--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+.tic-tac-toe {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    width: max-content;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.square {
+    border: 1px solid red;
+    float: left;
+    font-size: 40px;
+    width: 100px;
+    height: 100px;
+    padding: 0px;
+    text-align: center;
+    cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.restartBtn {
+    padding: 10px 15px;
+    border: none;
+    background: green;
+    color: white;
+    border-radius: 10px;
+    cursor: pointer;
 }
