--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,37 @@
+body {
+    background-color: #222222;
+    font-family: "Montserrat", sans-serif;
+    color: white;
+    background-image: url("./images/bg.png");
+}
+
 .tic-tac-toe {
-    margin: 0 auto;
+    margin: 50px auto 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
     width: max-content;
 }
 
+.tictactoe {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+    width: 400px;
+    height: 400px;
+}
+
+.tictactoe h1 {
+    font-size: 45px;
+}
+
 .square {
-    border: 1px solid red;
-    float: left;
-    font-size: 40px;
-    width: 100px;
-    height: 100px;
-    padding: 0px;
-    text-align: center;
+    font-size: 50px;
     cursor: pointer;
+    background-color: #2d2d2d;
+    border-radius: 20px;
+    color: white;
 }
 
 .restartBtn {
